--- a/UI/sections/CaseStudiesIntro/styles/carbon-space.scss
+++ b/UI/sections/CaseStudiesIntro/styles/carbon-space.scss
@@ -19,6 +19,7 @@
   [data-description] {
     margin: 0 auto;
     text-align: center;
+    max-width: unset;
   }
 
   .contentWrapper {
